--- a/other.html
+++ b/other.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>首页</title>
+	<title>其他任务展示</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<link rel="stylesheet" href="./css/common.css">
-	<link rel="stylesheet" href="./css/index.css">
+	<link rel="stylesheet" href="./css/other.css">
 </head>
 <body>
 	<div class="container">
@@ -23,57 +23,20 @@
 				</ul>
 			</div>
 		</div>
-
-	
-		<!-- banner -->
-		<div class="banner">
-			<img src="./img/banner-bg.jpg">
-			<div class="article-wrap">
-				<div class="article">
-					<div class="art-title">标题1</div>
-					<div class="art-content">这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- 三列等高 -->
-		<div class="content-wrap">
-			<div class="content">
-				<ul>
-					<li>
-						<img src="./img/1.jpg">
-						<div class="description">
-							<p>这里是正文，12px字体大小，行高170%。整块白色的底宽为320px，图片大小为300*180。</p>
-							<p>文字距离图片下方间隔为15px,距离白色底左右两侧的内边距为30px,距离白色底块下方的内边距为25px。</p>
-							<p>三个白色模块之间的内边距为10px，距离上面banner图片的间隔为10px。</p>
-						</div>
-					</li>
-					<li>
-						<img src="./img/2.jpg">
-						<div class="description">
-							<p>这三块白色模块的高度需要保持一致，且自适应于文字内容高度。</p>
-						</div>
-					</li>
-					<li>
-						<img src="./img/3.jpg">
-						<div class="description">
-							<p>图片和文字内容请自定义。</p>
-							<p>这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，</p>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-
-		<!-- 博主简介 -->
-		<div class="intro-wrap">
-			<div class="headimg">
-				<img src="./img/head.jpg">
-			</div>
-			<h1>Hi, I'm Cindy</h1>
-			<div class="self-intro">
-				这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍
-			</div>
+		<!-- main -->
+		<div class="wrapper">
+			<p>临时在github上搭建一个展示平台，展示我<a href="https://github.com/baidu-ife/ife" target="_blank"><strong>百度前端学院</strong></a>第一期任务的成果。</p>
+			<p>现在所在的位置是中转站哦~</p>
+			<h2>task2</h2>
+			<p><a href="task2/task0002_1.html">task0002_1 输入框操作</a></p>
+			<p><a href="task2/task0002_2.html">task0002_2 倒计时器</a></p>
+			<p><a href="task2/task0002_3.html">task0002_3 轮播图</a></p>
+			<p><a href="task2/task0002_4.html">task0002_4 输入提示框</a></p>
+			<p><a href="task2/task0002_5.html">task0002_5 界面拖拽交互</a></p>
+			<h2>task3</h2>
+			<p><a href="task3/index.html">TO-DO (localStorage,请先新建任务)</a></p>
+			<h2>task4</h2>
+			<p><a href="task4/index.html">移动TO-DO简易版</a></p>
 		</div>
 
 		<!-- footer -->
@@ -136,6 +99,5 @@
 			</div>
 		</div>
 	</div>
-	
 </body>
 </html>
