--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,7 @@
 			<div class="topnav">
 				<h1>YourLOGO</h1>
 				<ul>
+					<li><a href="other.html" style="font-size: 20px;"><strong>其他任务展示</strong></a></li>
 					<li><a href="index.html">首页</a></li>
 					<li><a href="blog.html">文章</a></li>
 					<li><a href="gallery.html">作品</a></li>
