--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
 		<div class="header">
 			<a href="https://github.com/" target="_blank"><div id="github-icon"></div></a>
 			<div class="topnav">
-				<h1>YourLOGO</h1>
+				<div class="logo"></div>
 				<ul>
-					<li><a href="other.html" style="font-size: 20px;"><strong>其他任务展示</strong></a></li>
+					<li><a href="other.html" style="font-size: 20px;"><strong>其他作品展示</strong></a></li>
 					<li><a href="index.html">首页</a></li>
 					<li><a href="blog.html">文章</a></li>
 					<li><a href="gallery.html">作品</a></li>
@@ -29,12 +29,13 @@
 			<ul>
 				<li>
 					<div class="head-image">
-						<img src="./img/head.jpg">
+						<img src="./img/mc-head.jpg">
 					</div>
 					<div style="margin-top: -50px;">
-						<div class="titles" style="height:160px;"><h2>NAME</h2></div>
+						<div class="titles" style="height:160px;"><h2>梦禅</h2></div>
 						<div class="details" style="height:175px;">
-							<p style="text-indent: 2em;">这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍……</p>
+							<p style="text-indent: 2em;">90后，热爱前端，梦想成为一名优秀的前端攻城狮。</p>
+							<p style="text-indent: 2em;">女汉子，上得了厅堂，下得了厨房，写得了代码，翻得了围墙。爱运动，爱美食，爱一切美好的事物...还爱笑 ^_^</p>
 						</div>
 					</div>
 				</li>
@@ -44,9 +45,9 @@
 					</div>
 					<div class="titles" style="height:110px;"><h2>联系方式</h2></div>
 					<div class="details" style="height:125px;">
-						<p>联系方式1：xxxxxxxxxxx</p>
-						<p>联系方式2：xxxxxxxxxxx</p>
-						<p>联系方式3：xxxxxxxxxxx</p>
+						<p>联系方式1：15734099665</p>
+						<p>联系方式2：liulying@126.com</p>
+						<p>联系方式3：270506566(微博)</p>
 					</div>
 				</li>
 				<li>
@@ -57,7 +58,7 @@
 					<div class="details" style="height:265px;">
 						<div class="detail-item">
 							<div class="year"><span>2006</span></div>
-							<p>某某某某高中</p>
+							<p>承德一中</p>
 						</div>
 						<div class="detail-item">
 							<div class="year"><span>2009</span></div>
