--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<div class="header">
 			<a href="https://github.com/" target="_blank"><div id="github-icon"></div></a>
 			<div class="topnav">
-				<h1>YourLOGO</h1>
+				<div class="logo"></div>
 				<ul>
-					<li><a href="other.html" style="font-size: 20px;"><strong>其他任务展示</strong></a></li>
+					<li><a href="other.html" style="font-size: 20px;"><strong>其他作品展示</strong></a></li>
 					<li><a href="index.html">首页</a></li>
 					<li><a href="blog.html">文章</a></li>
 					<li><a href="gallery.html">作品</a></li>
@@ -30,8 +30,8 @@
 			<img src="./img/banner-bg.jpg">
 			<div class="article-wrap">
 				<div class="article">
-					<div class="art-title">标题1</div>
-					<div class="art-content">这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，</div>
+					<div class="art-title">梦禅</div>
+					<div class="art-content">荣枯事过都成梦，悲喜不惊便是禅。</div>
 				</div>
 			</div>
 		</div>
@@ -68,11 +68,13 @@
 		<!-- 博主简介 -->
 		<div class="intro-wrap">
 			<div class="headimg">
-				<img src="./img/head.jpg">
+				<img src="./img/mc-head.jpg">
 			</div>
-			<h1>Hi, I'm Cindy</h1>
+			<h1>你好，我是梦禅</h1>
 			<div class="self-intro">
-				这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍，这一段很长的自我介绍
+				<p>90后，热爱前端，梦想成为一名优秀的前端攻城狮</p>
+				<p>女汉子，上得了厅堂，下得了厨房，写得了代码，翻得了围墙</p>
+				<p>爱运动，爱美食，爱一切美好的事物...还爱笑 ^_^</p>
 			</div>
 		</div>
 
