--- a/gallery.html
+++ b/gallery.html
@@ -13,9 +13,9 @@
 		<div class="header">
 			<a href="https://github.com/" target="_blank"><div id="github-icon"></div></a>
 			<div class="topnav">
-				<h1>YourLOGO</h1>
+				<div class="logo"></div>
 				<ul>
-					<li><a href="other.html" style="font-size: 20px;"><strong>其他任务展示</strong></a></li>
+					<li><a href="other.html" style="font-size: 20px;"><strong>其他作品展示</strong></a></li>
 					<li><a href="index.html">首页</a></li>
 					<li><a href="blog.html">文章</a></li>
 					<li><a href="gallery.html">作品</a></li>
