--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 					<div style="margin-top: -50px;">
 						<div class="titles" style="height:160px;"><h2>梦禅</h2></div>
 						<div class="details" style="height:175px;">
-							<p style="text-indent: 2em;">90后，热爱前端，梦想成为一名优秀的前端攻城狮。</p>
+							<p style="text-indent: 2em;">90后，热爱前端，梦想成为一名优秀的前端攻城狮</p>
 							<p style="text-indent: 2em;">女汉子，上得了厅堂，下得了厨房，写得了代码，翻得了围墙。爱运动，爱美食，爱一切美好的事物...还爱笑 ^_^</p>
 						</div>
 					</div>
@@ -45,9 +45,9 @@
 					</div>
 					<div class="titles" style="height:110px;"><h2>联系方式</h2></div>
 					<div class="details" style="height:125px;">
-						<p>联系方式1：15734099665</p>
-						<p>联系方式2：liulying@126.com</p>
-						<p>联系方式3：270506566(微博)</p>
+						<p>电话：15734099665</p>
+						<p>邮箱：liulying@126.com</p>
+						<p> QQ： 954043526</p>
 					</div>
 				</li>
 				<li>
@@ -62,13 +62,13 @@
 						</div>
 						<div class="detail-item">
 							<div class="year"><span>2009</span></div>
-							<p>某某某某大学</p>
-							<p>某某学院&nbsp;某某专业</p>
+							<p>河北师范大学</p>
+							<p>数信学院&nbsp;计算机科学与技术专业</p>
 						</div>
 						<div class="detail-item">
 							<div class="year"><span>2013</span></div>
-							<p>某某某某大学</p>
-							<p>某实验室&nbsp;某某专业&nbsp;某某方向</p>
+							<p>中国科学院</p>
+							<p>研发中心&nbsp;计算机科学与技术专业</p>
 						</div>
 					</div>
 				</li>
@@ -76,18 +76,18 @@
 					<div class="other-image">
 						<img src="./img/company.jpg" style="width:100px;height:100px;">
 					</div>
-					<div class="titles" style="height:400px;"><h2>实习经历</h2></div>
+					<div class="titles" style="height:400px;"><h2>实践经历</h2></div>
 					<div class="details" style="height:415px;">
 						<div class="detail-item">
-							<div class="year"><span>2014</span></div>
-							<p>某某公司</p>
-							<p>主要工作内容描述</p>
+							<div class="year"><span>2015</span></div>
+							<p>担任沈阳师范大学毕业设计指导老师</p>
+							<p>指导一名学生完成毕业设计和毕业论文</p>
 						</div>
-						<div class="detail-item">
+						<!-- <div class="detail-item">
 							<div class="year"><span>2015</span></div>
 							<p>某某公司</p>
 							<p>主要工作内容描述</p>
-						</div>
+						</div> -->
 					</div>
 				</li>
 			</ul>
