--- a/index.html
+++ b/index.html
@@ -43,22 +43,20 @@
 					<li>
 						<img src="./img/1.jpg">
 						<div class="description">
-							<p>这里是正文，12px字体大小，行高170%。整块白色的底宽为320px，图片大小为300*180。</p>
-							<p>文字距离图片下方间隔为15px,距离白色底左右两侧的内边距为30px,距离白色底块下方的内边距为25px。</p>
-							<p>三个白色模块之间的内边距为10px，距离上面banner图片的间隔为10px。</p>
+							<p>一帘幽月，挂心头，倚楼听风，愁更愁。我是一个恋上墨香的人，闲暇时， 执一素笔，捻一素笺，挽袖研墨，蘸一笔泧金娇；檀香玉案，酿一绪落鸿章。几回轮渡，诗酒趁年华。你是我素笔下的一首诗经，我烂熟于心；你是我玉案前的一轮明月，我孤雌寡鹤。</p>
 						</div>
 					</li>
 					<li>
 						<img src="./img/2.jpg">
 						<div class="description">
-							<p>这三块白色模块的高度需要保持一致，且自适应于文字内容高度。</p>
+							<p>提一盏时光之灯，静雅思听，物语；观月雏乃，风姿。捧一卷有你的诗经朗朗诵词，暮年流光，沉睡一首经年的旧诗里，将自己夹于扉页中，以最美的姿态等你。日新月异，我听见了风的声音，于是，我借景抒情，以风的名义轻唤你的名字。一些过往情愫，乘风而归，抵达这里。</p>
 						</div>
 					</li>
 					<li>
 						<img src="./img/3.jpg">
 						<div class="description">
-							<p>图片和文字内容请自定义。</p>
-							<p>这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，这里是内容，</p>
+							<p>《江城子·记梦》——苏轼</p>
+							<p>十年生死两茫茫，不思量，自难忘。千里孤坟，无处话凄凉。纵使相逢应不识，尘满面，鬓如霜。夜来幽梦忽还乡，小轩窗，正梳妆。相顾无言，惟有泪千行。料得年年肠断处，明月夜，短松冈。</p>
 						</div>
 					</li>
 				</ul>
