--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<h1>你好，我是梦禅</h1>
 			<div class="self-intro">
 				<p>90后，热爱前端，梦想成为一名优秀的前端攻城狮</p>
-				<p>女汉子，上得了厅堂，下得了厨房，写得了代码，翻得了围墙</p>
+				<p>女汉子，上得了厅堂，下得了厨房，写得了代码，翻得了城墙</p>
 				<p>爱运动，爱美食，爱一切美好的事物...还爱笑 ^_^</p>
 			</div>
 		</div>
